<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CoolReader</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="add_new_content">添加新内容</string>
    <string name="checkuserpass">确认密码:</string>
    <string name="delete">删除</string>
    <string name="email">邮箱:</string>
    <string name="edit">编辑</string>
    <string name="female">女</string>
    <string name="login">登陆</string>
    <string name="male">男</string>
    <string name="my_file">我的存档</string>
    <string name="my_listing">我的列表</string>
    <string name="coolreader">CoolReader</string>
    <string name="quit">取消:</string>
    
    <!-- 登录模块 -->
    <string name="logo">Logo图片</string>
    <string name="uname">name:</string>
	<string name="upass">pass:</string>
	<string name="input_name">请输入邮箱</string>
	<string name="input_pass">请输入密码</string>
	
	<!-- 设置 -->
	<string name="edit_count">编辑账号</string>
	<string name="setting_img_desc">设置列表图片</string>
	<string name="setting_edit_pass">修改密码</string>
	
	<!-- 修改密码 -->
	<string name="edit_change_old_pass_title">请输入原密码</string>
	<string name="edit_change_pass">新密码</string>
	<string name="edit_change_confirm_pass">确认密码</string>
	<string name="edit_change_pass_save_bt_text">保存</string>

	<string name="register">注册</string>
    <string name="remember_pass">记住密码？</string>
    <string name="reset">重置</string>
    <string name="refresh">刷新</string>
    <string name="sex">性&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;别:</string>
    <string name="setting">设置</string>
    <string name="save_document">存档</string>
    <string name="username">账号:</string>
    <string name="userpass">密&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;码:</string>
    
    <drawable name="bg_savefile_normal">#FF6347</drawable>
    <drawable name="bg_savefile_pressed">#FF4500</drawable>
    <!-- 添加新内容  -->
	<string name="addnew_entry">进入</string>
	<string name="addnew_quit">取消</string>

</resources>
