<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:orientation="vertical">
    
    <!-- 原密码 -->
	<EditText 
	    android:id="@+id/edit_change_old_pass"
	    android:layout_marginTop="10dp"
	    android:drawableLeft="@drawable/icon_login_name_et"
	    android:inputType="textPassword"
	    android:hint="@string/edit_change_old_pass_title"
	    style="@style/default_edittext_bg"
	    />
	
	<!-- 新密码 -->
	<EditText 
	    android:id="@+id/edit_change_new_pass"
	    android:drawableLeft="@drawable/icon_login_password_et"
	    android:inputType="textPassword"
	    android:layout_marginTop="10dp"
	    android:hint="@string/edit_change_pass"
	    style="@style/default_edittext_bg"/>
	
	<!-- 确认密码 -->
	<EditText 
	    android:id="@+id/edit_change_confirm_new_pass"
	    android:drawableLeft="@drawable/icon_login_password_et"
	    android:inputType="textPassword"
	    android:layout_marginTop="10dp"
	    android:hint="@string/edit_change_confirm_pass"
	    style="@style/default_edittext_bg"/>
	
	<Button 
	    android:id="@+id/eidt_change_pass_bt"
	    android:text="@string/edit_change_pass_save_bt_text"
	    style="@style/default_button_blue_bg"/>
</LinearLayout>
