<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/drawerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainbackground"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:id="@+id/relative_coolReader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <ImageView
                android:id="@+id/coolReaderDrawer"
                android:layout_width="40sp"
                android:layout_height="45sp"
                android:background="@drawable/eq_btn_b" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/coolReaderDrawer"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="10sp"
                android:layout_toRightOf="@+id/coolReaderDrawer"
                android:gravity="center"
                android:text="@string/coolreader"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/coolReaderSearch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10sp"
                android:layout_toLeftOf="@+id/coolReaderMenu"
                android:background="@drawable/onlinemusic_search_associate" >
            </Button>

            <ImageView
                android:id="@+id/coolReaderMenu"
                android:layout_width="40sp"
                android:layout_height="45sp"
                android:layout_alignParentRight="true"
                android:background="@drawable/play_bar_sidebar"
                android:contentDescription="@string/action_settings" />
        </RelativeLayout>

        <View
            android:id="@+id/coolReaderLine"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/relative_coolReader"
            android:background="#000000" />

        <FrameLayout
            android:id="@+id/frameLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/coolReaderLine" >

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <ListView
                    android:id="@+id/coolReaderListView"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:divider="@drawable/biz_pc_account_line"
                    android:paddingBottom="@dimen/activity_vertical_margin"
                    android:paddingLeft="@dimen/activity_horizontal_margin"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="@dimen/activity_vertical_margin" >
                </ListView>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/coolReaderListView"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="1sp"
                    android:layout_marginTop="20sp"
                    android:orientation="horizontal" >

                    <Button
                        android:id="@+id/coolReader_delete"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@drawable/item_delete"
                        android:gravity="left|center"
                        android:text="@string/delete"
                        android:textColor="#FF9DAA"
                        android:textSize="20sp" />

                    <Button
                        android:id="@+id/coolReader_save_document"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@null"
                        android:drawableLeft="@drawable/theme_complete"
                        android:gravity="left|center"
                        android:text="@string/save_document"
                        android:textColor="#17C8A8"
                        android:textSize="20sp" />
                </LinearLayout>
            </RelativeLayout>
        </FrameLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/leftLinear_coolReader"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="left"
        android:background="@drawable/eq_bkg1"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/coolReaderPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/coolReaderUserName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right|center"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </LinearLayout>

        <Button
            android:id="@+id/coolReaderFile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:background="@drawable/tv_leftdraw_selector"
            android:text="我的存档\t\t\t\t>"
            android:textColor="@color/white"/>

        <Button
            android:id="@+id/coolReaderListing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24sp"
            android:background="@drawable/tv_leftdraw_selector"
            android:text="我的列表\t\t\t\t>"
            android:textColor="@color/white"/>
    </LinearLayout>

</android.support.v4.widget.DrawerLayout>